Remove publicationInformation stuff
